# travel-chatbot

./: .gitignore
backend/: app.py  config.py  pyproject.toml  users.json
backend/agno_agent/: agent.py
backend/agno_agent/tools/: budget_tool.py  destination_tool.py  weather_tool.py
backend/database/: mongo_utils.py  users.json
backend/routes/: chat_routes.py
backend/services/: chat_service.py
backend/utils/: error_handler.py  login.py
frontend/frontend/: package-lock.json  package.json  vite.config.js
frontend/frontend/public/images/: background2.avif
frontend/frontend/src/: App.jsx  main.jsx
frontend/frontend/src/app/: store.js
frontend/frontend/src/components/: ChatWindow.jsx  ProtectedRoute.jsx
frontend/frontend/src/features/auth/: authAPI.js  authSlice.js
frontend/frontend/src/features/chat/: chatAPI.js  chatSlice.js
frontend/frontend/src/pages/: ChatbotPage.jsx  Home.jsx  Login.jsx  SignUp.jsx
